apps/base/autobots/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobots-ui
  namespace: autobots
spec:
  selector:
    app: autobots-ui
  ports:
    - port: 3000
      targetPort: 3000
