apps/base/autobots/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobots
  namespace: autobots
  labels:
    app: autobots
    app.kubernetes.io/component: orchestrator
    app.kubernetes.io/name: autobots
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: autobots.landryzetam.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autobots
                port:
                  number: 8000
